# py-be-findmeajob

./: pyproject.toml
ai-search/: main.py  test_codes.py
model/: gemini.py
tools/discord/: main.py
tools/linkedin/: main.py
tools/reddit/: main.py  reddit_comments.py  reddit_posts.py
